adding in more code to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
             to remove the file</li>
         <li>If you want to add all your files you could use <em>git add .</em>and this will add all the changes you made
             to your files. Also I believe using the * key will also work</li>
-        <li></li>
+        <li>Next you can commit your files using <em>git commit</em>. If you use this metthod two options can come into
+            play:
+        <li>
+            1. Your code editor will pop up and a seprate widow will appear letting you write in a comment.
+        </li>
+        <li>
+            2.
+        </li>
+        </li>
         <li></li>
     </ul>
 </body>
