--- a/index.html
+++ b/index.html
@@ -12,24 +12,32 @@
     <p>This is a clone from Brad Treversy video thatis called Git and GitHub Crash Course. I am following along refreash
         my skills on git and Git Hub.</p>
     <ul>
-        <li>Using<strong>Touch</strong>command in git bash you can create new files.</li>
+        <li>Using <strong>Touch</strong> command in git bash you can create new files.</li>
         <li>Next step would be using git init</li>
         <li>Next would be to add your username and user email</li>
-        <li>If you want to add files to your repository you can use the command <em>git add [file your adding]</em>in
+        <li>If you want to add files to your repository you can use the command <strong>git add [file your
+                adding]</strong>in
             git bash</li>
         <li>Always use git status. This will show the changes you made.</li>
-        <li>If you mad a mistake on adding a file using <em>git rm--cached[file your removing]</em>is the command to use
+        <li>If you mad a mistake on adding a file using <strong>git rm--cached[file your removing]</strong>is the
+            command to use
             to remove the file</li>
-        <li>If you want to add all your files you could use <em>git add .</em>and this will add all the changes you made
+        <li>If you want to add all your files you could use <strong>git add .</strong>and this will add all the changes
+            you made
             to your files. Also I believe using the * key will also work</li>
-        <li>Next you can commit your files using <em>git commit</em>. If you use this metthod two options can come into
+        <li>Next you can commit your files using <strong>git commit</strong>. If you use this metthod two options can
+            come into
             play:
-        <li>
-            1. Your code editor will pop up and a seprate widow will appear letting you write in a comment.
-        </li>
-        <li>
-            2.
-        </li>
+            <ul>
+                <li>
+                    1. Your code editor will pop up and a seprate widow will appear letting you write in a comment.
+                </li>
+                <li>
+                    2. You can use <em>git commit -m'whatever you want to put between this two parentheses'</em>and this
+                    will
+                    skip you code editor opening up.
+                </li>
+            </ul>
         </li>
         <li></li>
     </ul>
