adding in more files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
         </li>
-        <li></li>
+        <li>By adding a <strong>.gitignore</strong> file different files can be choosen to be ignored</li>
     </ul>
 </body>
 
