update code in index.html to add topic about branches

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </li>
         <li>By adding a <strong>.gitignore</strong> file different files can be choosen to be ignored</li>
     </ul>
+    <br>
+    <h2>Branches</h2>
+    <p>This section will cover branches. Branches are great to use when colaborating with a other developer on a
+        project. This gives you chance to leave the main source code alone so you can work on a copy of it.</p>
 </body>
 
 </html>
