--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,
+            initial-scale=1.0" />
+        <title>Git and GitHub Vrash Course Clone</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git and GitHub Vrash Course Clone</title>
-</head>
-
-<body>
-    <h1>The ins and outs of Git and GitHub</h1>
-    <p>This is a clone from Brad Treversy video thatis called Git and GitHub Crash Course. I am following along refreash
-        my skills on git and Git Hub.</p>
-    <ul>
-        <li>Using <strong>Touch</strong> command in git bash you can create new files.</li>
-        <li>Next step would be using git init</li>
-        <li>Next would be to add your username and user email</li>
-        <li>If you want to add files to your repository you can use the command <strong>git add [file your
-                adding]</strong>in
-            git bash</li>
-        <li>Always use git status. This will show the changes you made.</li>
-        <li>If you mad a mistake on adding a file using <strong>git rm--cached[file your removing]</strong>is the
-            command to use
-            to remove the file</li>
-        <li>If you want to add all your files you could use <strong>git add .</strong>and this will add all the changes
-            you made
-            to your files. Also I believe using the * key will also work</li>
-        <li>Next you can commit your files using <strong>git commit</strong>. If you use this metthod two options can
-            come into
-            play:
-            <ul>
-                <li>
-                    1. Your code editor will pop up and a seprate widow will appear letting you write in a comment.
-                </li>
-                <li>
-                    2. You can use <em>git commit -m'whatever you want to put between this two parentheses'</em>and this
-                    will
-                    skip you code editor opening up.
-                </li>
-            </ul>
-        </li>
-        <li>By adding a <strong>.gitignore</strong> file different files can be choosen to be ignored</li>
-    </ul>
-    <br>
-    <h2>Branches</h2>
-    <p>This section will cover branches. Branches are great to use when colaborating with a other developer on a
-        project. This gives you chance to leave the main source code alone so you can work on a copy of it.</p>
-</body>
-
+    <body>
+        <h1>The ins and outs of Git and GitHub</h1>
+        <p>
+            This is a clone from Brad Treversy video thatis called Git and GitHub Crash Course. I am following along refreash my skills on git and Git Hub.
+        </p>
+        <ul>
+            <li>
+                Using <strong>Touch</strong> command in git bash you can create new files.
+            </li>
+            <li>Next step would be using git init</li>
+            <li>Next would be to add your username and useremail</li>
+            <li>
+                If you want to add files to your repository you can use the command <strong>git add [file your adding]</strong>in git bash
+            </li>
+            <li>Always use git status. This will show the changes you made.</li>
+            <li>
+                If you mad a mistake on adding a file using <strong>git rm--cached[file your removing]</strong>is the command to use to remove the file
+            </li>
+            <li>
+                If you want to add all your files you could use <strong>git add.</strong>and this will add all the changes you made to your files. Also I believe using the * key will also
+                work
+            </li>
+            <li>
+                Next you can commit your files using <strong>git commit</strong>. If you use this metthod two options can come into play:
+                <ul>
+                    <li>
+                        1. Your code editor will pop up and a seprate widow will appear letting you write in a comment.
+                    </li>
+                    <li>
+                        2. You can use<em>git commit -m'whatever you want to put between this two parentheses'</em>and this will skip you code editor opening up.
+                    </li>
+                </ul>
+            </li>
+            <li>
+                By adding a <strong>.gitignore</strong> file different files can be choosen to be ignored
+            </li>
+        </ul>
+        <br />
+        <h2>Branches</h2>
+        <p>
+            This section will branches. Branches is a great way to work on code without effected the source code. This is very helpful when working with other developers on projects together.
+        </p>
+    </body>
 </html>
